--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
             <a href="#"> <i class="fas fa-phone"></i> +123-456-7890 </a>
             <a href="#"> <i class="fas fa-phone"></i> +111-222-3333 </a>
             <a href="#"> <i class="fas fa-envelope"></i> shaikhanas@gmail.com </a>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> mumbai, india - 400104 </a>
+            <a href="#"> <i class="fas fa-map-marker-alt"></i> Dhaka ,Bangladesh </a>
         </div>
 
         <div class="box">
@@ -604,7 +604,7 @@
 
     </div>
 
-    <div class="credit"> created by mr. web designer | all rights reserved </div>
+    <div class="credit"> created by Mahin </div>
 
 </section>
 
