--- a/index.html
+++ b/index.html
@@ -225,42 +225,42 @@
         <div class="box">
             <i class="fas fa-car"></i>
             <h3>car selling</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis, nisi.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing  Corporis, nisi.</p>
             <a href="#" class="btn"> read more</a>
         </div>
 
         <div class="box">
             <i class="fas fa-tools"></i>
             <h3>parts repair</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis, nisi.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing  Corporis, nisi.</p>
             <a href="#" class="btn"> read more</a>
         </div>
 
         <div class="box">
             <i class="fas fa-car-crash"></i>
             <h3>car insurance</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis, nisi.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing  Corporis, nisi.</p>
             <a href="#" class="btn"> read more</a>
         </div>
 
         <div class="box">
             <i class="fas fa-car-battery"></i>
             <h3>battery replacement</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis, nisi.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing  Corporis, nisi.</p>
             <a href="#" class="btn"> read more</a>
         </div>
 
         <div class="box">
             <i class="fas fa-gas-pump"></i>
             <h3>oil change</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis, nisi.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing  Corporis, nisi.</p>
             <a href="#" class="btn"> read more</a>
         </div>
 
         <div class="box">
             <i class="fas fa-headset"></i>
             <h3>24/7 support</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis, nisi.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing  Corporis, nisi.</p>
             <a href="#" class="btn"> read more</a>
         </div>
 
